--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
         </div>
         
     </div>
-    <div class="❤">
+    <div class="news-heading">
+        <h1 class="news">News</h1>
+    </div>
+    <div class="news-card-container">
         <div class="🃏">
             <div class="📦">
-                <img src="./Assets/mickey.jpg" title="Illusion Island">
+                <img src="./Assets/mickey.jpg" title="Illusion Island" class="img">
             </div>
             <div class="🎶">
                 <div class="📚">
@@ -121,7 +124,7 @@
         </div>
         <div class="🃏">
             <div class="📦">
-                <img src="./Assets/demon.jpg" title="Demon Slayer">
+                <img src="./Assets/demon.jpg" title="Demon Slayer" class="img">
             </div>
             <div class="🎶">
                 <div class="📚">
@@ -137,7 +140,7 @@
         </div>
         <div class="🃏">
             <div class="📦">
-                <img src="./Assets/pokemon.jpg" title="Pokemon Snap">
+                <img src="./Assets/pokemon.jpg" title="Pokemon Snap" class="img">
             </div>
             <div class="🎶">
                 <div class="📚">
@@ -153,7 +156,7 @@
         </div>
         <div class="🃏">
             <div class="📦">
-                <img src="./Assets/jjk.jpg" title="Jujutsu Kaisen">
+                <img src="./Assets/jjk.jpg" title="Jujutsu Kaisen" class="img">
             </div>
             <div class="🎶">
                 <div class="📚">
@@ -164,7 +167,7 @@
                         Bandai Namco will be releasing new DLC - adding the new playable characters Satoru Gojo
                         (Student), Sugero Geto (Student), and Toji Fushiguro. This will come with an additional
                         scenario, additional outfits, and more customisation items.</p>
-                    <a href="https://youtu.be/jir62_ptloI">Read More..</a>
+                    <a href="https://youtu.be/jir62_ptloI" cl>Read More..</a>
                 </div>
             </div>
         </div>
