--- a/index.html
+++ b/index.html
@@ -169,6 +169,144 @@
 
     </div>
 
+
+    <section><h1>Best Sellers</h1>
+        <div class="container">
+            
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/demon.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Demon Slayer<br><span>Action Game</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$59.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/mickey.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Illusion Island<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$39.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/jjk.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Jujutsu kaisen<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$79.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/pokemon.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Pokemon Snap<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$59.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div> 
+        </div>  
+            
+        <div class="container">  
+             <div class="card">
+                <div class="imgbx">
+                    <img src="../games/mario.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Super Mario<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$49.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/luigi.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Luigi's Mansion<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$79.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/kirby.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Kirby<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$59.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgbx">
+                    <img src="../games/pmario.jpg" >
+                </div>
+                <div class="content">
+                    <div class="contentbx">
+                        <h3>Paper Mario<br><span>Story Mode</span></h3>
+                    </div><br>  
+                    <div class="sci">
+                        <h4>$69.99</h4>
+                        <input type="radio" name="edition" >Physical edition <br>
+                        <input type="radio" name="edition">Digital edition  <br> 
+                        <a href="#" class="btn" >Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </section> 
+
     <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script> 
 </body>
 
