--- a/index.html
+++ b/index.html
@@ -113,19 +113,15 @@
       >
         <div class="slider-item">
           <h1 class="video-heading">Super Mario™ 3D World + Bowser’s Fury</h1>
-          <img src="./Assets/01.png" alt="01" draggable="false" />
         </div>
         <div class="slider-item">
           <h1 class="video-heading">Luigi's Mansion™ 2 HD</h1>
-          <img src="./Assets/02.png" alt="02" draggable="false" />
         </div>
         <div class="slider-item">
           <h1 class="video-heading">Super Mario™ 3D World + Bowser’s Fury</h1>
-          <img src="./Assets/03.png" alt="03" draggable="false" />
         </div>
         <div class="slider-item">
           <h1 class="video-heading">Luigi's Mansion™ 2 HD</h1>
-          <img src="./Assets/04.jpg" alt="04" draggable="false" />
         </div>
       </div>
       <div class="cursor">
@@ -244,6 +240,7 @@
         <img src="/Assets/web.banner-07.png" alt="wire" class="wire" />
       </div>
     </div>
+    <div class="best-sellers"></div>
 
     <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
   </body>
