--- a/index.html
+++ b/index.html
@@ -66,41 +66,7 @@
                 d="m 30,67 h 40 c 0,0 8.5,0.68551 8.5,-10.375 0,-8.292653 -6.122707,-9.002293 -8.5,-6.625 l -11.071429,11.071429"
               />
             </svg>
-            <div class="toolBox">
-              <div class="triangle"></div>
-              <div class="links-main">
-                <ul class="links">
-                  <li class="link-list">
-                    <a href="" class="link align-center"
-                      >All Categories <i class="fa-solid fa-angle-down"></i
-                    ></a>
-                  </li>
-                  <li class="link-list">
-                    <a href="" class="link align-center"
-                      >My Nintendo Store <i class="fa-solid fa-angle-down"></i
-                    ></a>
-                  </li>
-                  <li class="link-list">
-                    <a href="" class="link align-center"
-                      >Games <i class="fa-solid fa-angle-down"></i
-                    ></a>
-                  </li>
-                  <li class="link-list">
-                    <a href="" class="link align-center"
-                      >Nintendo switch <i class="fa-solid fa-angle-down"></i
-                    ></a>
-                  </li>
-                  <li class="link-list">
-                    <a
-                      href="https://play.nintendo.com/"
-                      target="_blank"
-                      class="link align-center"
-                      >Play Nintendo</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
+            <div class="toolBox"></div>
           </div>
         </div>
       </div>
