--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/demon.jpg" >
+                    <img src="../Assets/demon.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -229,7 +229,7 @@
             </div>
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/mickey.jpg" >
+                    <img src="../Assets/mickey.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -245,7 +245,7 @@
             </div>
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/jjk.jpg" >
+                    <img src="../Assets/jjk.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -261,7 +261,7 @@
             </div>
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/pokemon.jpg" >
+                    <img src="../Assets/pokemon.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -280,7 +280,7 @@
         <div class="container">  
              <div class="card">
                 <div class="imgbx">
-                    <img src="../games/mario.jpg" >
+                    <img src="../Assets/mario.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -296,7 +296,7 @@
             </div>
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/luigi.jpg" >
+                    <img src="../Assets/luigi.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -312,7 +312,7 @@
             </div>
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/kirby.jpg" >
+                    <img src="../Assets/kirby.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
@@ -328,7 +328,7 @@
             </div>
             <div class="card">
                 <div class="imgbx">
-                    <img src="../games/pmario.jpg" >
+                    <img src="../Assets/pmario.jpg" >
                 </div>
                 <div class="content">
                     <div class="contentbx">
